--- a/index.html
+++ b/index.html
@@ -35,4 +35,341 @@
       <button>Read More</button>
     </div>
   </header>
+  <section>
+    <div class="navbar-char">
+      <h2>JOJO CHARACTERS</h2>
+    </div>
+      <div class="char-sec">
+        <div class="ctn-char char-1">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char char-1">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char char-1">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char char-1">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char char-1">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char char-1">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char char-1">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char char-1">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char char-1">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+      </div>
+      <div class="char-sec">
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+      </div>
+      <div class="char-sec">
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+      </div>
+      <div class="char-sec">
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+        <div class="ctn-char ">
+          <div class="img-ctn-character">
+            <img src="./Images/StarPlatinum.png" alt="">
+          </div>
+          <div class="character-text">
+            <h3>Star Platnium</h3>
+            <p>Jotaro Kujo</p>
+          </div>
+        </div>
+      </div>
+  </section>
   <!-- IMAGES SECTION -->
