--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="./css/style.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>jojo sex</title>
+  <title>Jojo Website</title>
 </head>
 
 <body>
@@ -35,341 +38,171 @@
       <button>Read More</button>
     </div>
   </header>
-  <section>
-    <div class="navbar-char">
-      <h2>JOJO CHARACTERS</h2>
+  <section class="char-sec">
+    <div class="title">
+      <h2>Our<span class="news-title">Last News</span></h2>
     </div>
-      <div class="char-sec">
-        <div class="ctn-char char-1">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
+    <div class="ctn-p-news">
+      <div class="new">
+        <div class="new-image char-1">
+          <div class="top-but">
+            <p>New</p>
           </div>
         </div>
-        <div class="ctn-char char-1">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char char-1">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char char-1">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char char-1">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char char-1">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char char-1">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char char-1">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char char-1">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
+        <div class="new-text">
+          <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, corrupti.</p>
         </div>
       </div>
-      <div class="char-sec">
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
+      <div class="new">
+        <div class="new-image char-2">
+          <div class="top-but">
+            <p>New</p>
           </div>
         </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
+        <div class="new-text">
+          <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, corrupti.</p>
         </div>
       </div>
-      <div class="char-sec">
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
+      <div class="new">
+        <div class="new-image char-3">
+          <div class="top-but">
+            <p>New</p>
           </div>
         </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
+        <div class="new-text">
+          <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, corrupti.</p>
         </div>
       </div>
-      <div class="char-sec">
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
+    </div>
+    <div class="ctn-p-news">
+      <div class="new">
+        <div class="new-image char-4">
+          <div class="top-but">
+            <p>New</p>
           </div>
         </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
-        </div>
-        <div class="ctn-char ">
-          <div class="img-ctn-character">
-            <img src="./Images/StarPlatinum.png" alt="">
-          </div>
-          <div class="character-text">
-            <h3>Star Platnium</h3>
-            <p>Jotaro Kujo</p>
-          </div>
+        <div class="new-text">
+          <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, corrupti.</p>
         </div>
       </div>
+      <div class="new">
+        <div class="new-image char-5">
+          <div class="top-but">
+            <p>New</p>
+          </div>
+        </div>
+        <div class="new-text">
+          <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, corrupti.</p>
+        </div>
+      </div>
+      <div class="new">
+        <div class="new-image char-6">
+          <div class="top-but">
+            <p>New</p>
+          </div>
+        </div>
+        <div class="new-text">
+          <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, corrupti.</p>
+        </div>
+      </div>
+    </div>
   </section>
+  <section>
+    <div class="title">
+      <h2>Trending<span class="news-title">Now</span></h2>
+    </div>
+    <div class="ctn-p-news2">
+      <div class="new2">
+        <div class="new-image2 char-1">
+          <div class="top-but">
+            <p>Manga</p>
+          </div>
+        </div>
+      </div>
+      <div class="new2">
+        <div class="new-image2 char-2">
+          <div class="top-but">
+            <p>Manga</p>
+          </div>
+        </div>
+      </div>
+      <div class="new2">
+        <div class="new-image2 char-3">
+          <div class="top-but">
+            <p>Manga</p>
+          </div>
+        </div>
+      </div>
+      <div class="new2">
+        <div class="new-image2 char-4">
+          <div class="top-but">
+            <p>Manga</p>
+          </div>
+        </div>
+      </div>
+      <div class="new2">
+        <div class="new-image2 char-5">
+          <div class="top-but">
+            <p>Manga</p>
+          </div>
+        </div>
+      </div>
+      <div class="new2">
+        <div class="new-image2 char-6">
+          <div class="top-but">
+            <p>Manga</p>
+          </div>
+        </div>
+      </div>
+      <div class="new2">
+        <div class="new-image2 char-6">
+          <div class="top-but">
+            <p>Manga</p>
+          </div>
+        </div>
+      </div>
+      <div class="new2">
+        <div class="new-image2 char-6">
+          <div class="top-but">
+            <p>Manga</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="section-image">
+    <div class="img-sect">
+      <div class="img-sect-text">
+        <h2>Anime of the Year</h2>
+        <p>28/02/2022</p>
+        <button>Read More</button>
+      </div>
+    </div>
+  </section>
+  <footer class="footer-pagina">
+    <div class="icono">
+        <a href="https://whatsapp.com" target="_blank">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="https://instagram.com" target="_blank">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://facebook.com" target="_blank">
+            <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://youtube.com" target="_blank">
+            <i class="fab fa-youtube"></i>
+        </a>
+        <div class="icono-texto">
+            <p>All rights reserved &copy</p>
+        </div>
+    </div>
+</footer>
+
   <!-- IMAGES SECTION -->
